--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "autoprefixer": "^10",
     "axios": "^1.6.5",
+    "cookie": "^0.6.0",
     "core-js": "^3.8.3",
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
