--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.136",
+    "@types/cookie": "^0.6.0",
     "@types/jquery": "^3.5.29",
     "@types/js-cookie": "^3.0.6",
     "@types/mongodb": "^4.0.7",
