--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "^4.1.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.136",
