--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.6",
+    "@iamtraction/google-translate": "^2.0.1",
     "autoprefixer": "^10",
     "axios": "^1.6.5",
     "cookie": "^0.6.0",
